# django-llm-optimzer

./: .gitignore  PUBLISHING.md  README.md  context.py  decorators.py  pyproject.toml  suggestions.py
.github/workflows/: ci.yml  python-publish.yml  tests.yml
django_llm_optimizer/: api.py  apps.py  conf.py  middleware.py  types.py
django_llm_optimizer/analyzers/: __init__.py  aggregate.py  duplicates.py  nplusone.py  suggestions.py  summary.py
django_llm_optimizer/collectors/: context.py  queries.py  requests.py
django_llm_optimizer/exporters/: __init__.py  json_exporter.py
django_llm_optimizer/integrations/: celery.py  temporal.py
django_llm_optimizer/management/commands/: llm_profile_flush.py  llm_profile_request_summary.py
django_llm_optimizer/storage/: base.py  file.py  memory.py
django_llm_optimizer/testing/: __init__.py  assertions.py  context.py  decorators.py
django_llm_optimizer/utils/: fingerprint.py  sql.py  stacktrace.py
django_llm_optimzer/: api.py  apps.py  conf.py  middleware.py
django_llm_optimzer/analyzers/: aggregate.py  duplicates.py  nplusone.py  summary.py
django_llm_optimzer/collectors/: context.py  queries.py  requests.py
django_llm_optimzer/exporters/: json_exporter.py
django_llm_optimzer/integrations/: celery.py  temporal.py
django_llm_optimzer/management/commands/: llm_profile_flush.py  llm_profile_request_summary.py
django_llm_optimzer/storage/: base.py  file.py  memory.py
django_llm_optimzer/testing/: assertions.py
django_llm_optimzer/utils/: redact.py  stacktrace.py
django_llm_profiler/: __init__.py  api.py  apps.py  conf.py  middleware.py
django_llm_profiler/analyzers/: aggregate.py
django_llm_profiler/collectors/: context.py
django_llm_profiler/exporters/: json_exporter.py
django_llm_profiler/integrations/: __init__.py  celery.py  temporal.py
django_llm_profiler/storage/: file.py
tests/: conftest.py  test_aggregate.py  test_assertions.py  test_background_integrations.py  test_conf.py  test_duplicates.py  test_exporter.py  test_fingerprint.py  test_nplusone.py  test_profile_block.py
