[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-llm-profiler"
version = "0.1.0"
description = "Machine-readable Django query profiling for LLMs, tests, and CI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Akash Deshpande" }
]
keywords = ["django", "profiling", "sql", "performance", "llm", "ci"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "Django>=4.2",
]

[project.urls]
Homepage = "https://github.com/akamad007/django-llm-optimzer"
Repository = "https://github.com/akamad007/django-llm-optimzer"
Issues = "https://github.com/akamad007/django-llm-optimzer/issues"
PyPI = "https://pypi.org/project/django-llm-profiler/"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.15.0",
  "build>=1.2.0",
]

[tool.setuptools.packages.find]
include = ["django_llm_profiler*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
